# RedSand

./: .gitignore  2  3  Cargo.toml  README.md
assets/configs/: engine.yml
assets/models/blender_saves/: sample_crater.blend  sample_crater.blend1
assets/shaders/: planet_map.wgsl
assets/shaders/planet/: biomes.wgsl  planet.wgsl
src/: config_parser.rs  game_assets.rs  main.rs  setup.rs  skybox.rs
src/camera/: mod.rs  mouse.rs
src/camera_system/: mod.rs  mouse.rs
src/loading_screen/: mod.rs
src/planet/: mod.rs  noise.rs  planet_material.rs  planet_mesh.rs  provinces.rs
