[package]
name = "red_sand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_mod_raycast = "0.16.0"
itertools = "0.12.0"
unzip3 = "1.0.0"
image = { version = "0.24.7", features = [] }
rand = "0.8.5"
bevy_asset_loader = "0.18.0"
