[package]
name = "red_sand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_asset_loader = "0.18.0"
bevy_mod_raycast = "0.16.0"
futures-lite = "2.0.1"
itertools = "0.12.0"
image = { version = "0.24.7", features = [] }
log = "0.4.20"
rand = "0.8.5"
serde = "1.0.195"
serde_yaml = "0.9.30"
